[package]
name = "nekobot"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pas2rust/nekobot"
readme = "README.md"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*"
]

categories = []
description = "A visual automation bot: detects screen elements, clicks and types with Rust"
keywords = ["automation", "bot"]
authors = ["pas2rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/"
documentation = "https://docs.rs/nekobot"

[dependencies]
chrono = "0.4.42"
colorful = "0.3.2"
kenzu = "0"
nekoprint = "0"
reqwest = { version = "0", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shori = { version = "0", features = ["serde_json"] }
tokio = { version = "1.47.1", features = ["full"] }
